@@ -9,6 +9,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
 
+import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.stream.Collectors;
@@ -26,74 +27,96 @@ public class OwnerReviewService {
 
     /** 점주: 내 매장(카페+레스토랑) 리뷰 + 답글 DTO */
     public List<OwnerReviewDto> listForOwner(Long ownerId) {
-        var fmt = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm");
+        DateTimeFormatter fmt = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm");
 
         // 내 매장
-        var cafes = cafeRepository.findByOwner_Id(ownerId);
-        var rests = restaurantRepository.findByOwner_Id(ownerId);
+        List<Cafe> cafes = cafeRepository.findByOwner_Id(ownerId);
+        List<Restaurant> rests = restaurantRepository.findByOwner_Id(ownerId);
 
         List<Review> all = new ArrayList<>();
         if (!cafes.isEmpty()) {
-            var cafeIds = cafes.stream().map(Cafe::getId).toList();
+            List<Long> cafeIds = cafes.stream().map(Cafe::getId).collect(Collectors.toList());
             all.addAll(reviewRepository.findByCafe_IdInAndDeletedFalseOrderByCreatedAtDesc(cafeIds));
         }
         if (!rests.isEmpty()) {
-            var restIds = rests.stream().map(Restaurant::getId).toList();
+            List<Long> restIds = rests.stream().map(Restaurant::getId).collect(Collectors.toList());
             all.addAll(reviewRepository.findByRestaurant_IdInAndDeletedFalseOrderByCreatedAtDesc(restIds));
         }
-        if (all.isEmpty()) return List.of();
+        if (all.isEmpty()) return Collections.emptyList();
 
-        // 답글 일괄 로딩
-        var replyMap = ownerReplyRepository.findByReview_IdIn(all.stream().map(Review::getId).toList())
-                .stream().collect(Collectors.toMap(or -> or.getReview().getId(), or -> or));
+        // 답글 일괄 로딩 (리뷰당 답글 1개 가정, 혹시 중복 있으면 최신 것만 유지)
+        Map<Long, OwnerReply> replyMap = ownerReplyRepository
+                .findByReview_IdIn(all.stream().map(Review::getId).collect(Collectors.toList()))
+                .stream()
+                .collect(Collectors.toMap(
+                        or -> or.getReview().getId(),
+                        or -> or,
+                        (a, b) -> {
+                            LocalDateTime ta = (a.getUpdatedAt() != null) ? a.getUpdatedAt() : a.getCreatedAt();
+                            LocalDateTime tb = (b.getUpdatedAt() != null) ? b.getUpdatedAt() : b.getCreatedAt();
+                            if (ta == null) return b;
+                            if (tb == null) return a;
+                            return ta.isAfter(tb) ? a : b;
+                        }
+                ));
 
         // 이름 맵
-        Map<Long,String> cafeName = cafes.stream().collect(Collectors.toMap(Cafe::getId, Cafe::getName));
-        Map<Long,String> restName = rests.stream().collect(Collectors.toMap(Restaurant::getId, Restaurant::getName));
+        Map<Long, String> cafeName = cafes.stream().collect(Collectors.toMap(Cafe::getId, Cafe::getName));
+        Map<Long, String> restName = rests.stream().collect(Collectors.toMap(Restaurant::getId, Restaurant::getName));
 
-        // DTO 변환 (타깃별 분기)
+        // DTO 변환
         return all.stream().map(rv -> {
-            boolean isCafe = rv.getCafe()!=null;
+            boolean isCafe = rv.getCafe() != null;
             String targetType = isCafe ? "CAFE" : "RESTAURANT";
             String targetName = isCafe
                     ? cafeName.getOrDefault(rv.getCafe().getId(), "카페")
                     : restName.getOrDefault(rv.getRestaurant().getId(), "레스토랑");
 
-            var rep = replyMap.get(rv.getId());
+            OwnerReply rep = replyMap.get(rv.getId());
+
+            String reviewCreatedAt = formatTs(rv.getCreatedAt(), rv.getUpdatedAt(), fmt);
+            String replyUpdatedAt = (rep != null) ? formatTs(rep.getUpdatedAt(), rep.getCreatedAt(), fmt) : null;
+
             return OwnerReviewDto.builder()
                     .reviewId(rv.getId())
                     .targetType(targetType)
                     .targetName(targetName)
                     .rating(rv.getRating())
                     .content(rv.getContent())
-                    .createdAt(rv.getCreatedAt().format(fmt))
+                    .createdAt(reviewCreatedAt)
                     .authorName(safeName(rv.getUser()))
-                    .replyId(rep!=null ? rep.getId() : null)
-                    .replyContent(rep!=null ? rep.getContent() : null)
-                    .replyUpdatedAt(rep!=null ? rep.getUpdatedAt().format(fmt) : null)
-                    .hasReply(rep!=null)
+                    .replyId(rep != null ? rep.getId() : null)
+                    .replyContent(rep != null ? rep.getContent() : null)
+                    .replyUpdatedAt(replyUpdatedAt)
+                    .hasReply(rep != null)
                     .build();
-        }).toList();
+        }).collect(Collectors.toList());
     }
 
     private String safeName(User u) {
         if (u == null) return "손님";
-        if (u.getNickname()!=null && !u.getNickname().isBlank()) return u.getNickname();
-        if (u.getEmail()!=null) return u.getEmail();
+        if (u.getNickname() != null && !u.getNickname().isBlank()) return u.getNickname();
+        if (u.getEmail() != null) return u.getEmail();
         return "사용자";
+    }
+
+    /** updatedAt 우선, 없으면 createdAt 사용해서 포맷팅 (둘 다 null이면 null) */
+    private static String formatTs(LocalDateTime primary, LocalDateTime fallback, DateTimeFormatter fmt) {
+        LocalDateTime ts = (primary != null) ? primary : fallback;
+        return (ts != null) ? ts.format(fmt) : null;
     }
 
     /** 점주 소유권 검사 (카페/레스토랑 모두) */
     private boolean canManage(Long ownerId, Review rv) {
-        if (rv.getCafe()!=null)       return cafeRepository.existsByIdAndOwner_Id(rv.getCafe().getId(), ownerId);
-        if (rv.getRestaurant()!=null) return restaurantRepository.existsByIdAndOwner_Id(rv.getRestaurant().getId(), ownerId);
+        if (rv.getCafe() != null)       return cafeRepository.existsByIdAndOwner_Id(rv.getCafe().getId(), ownerId);
+        if (rv.getRestaurant() != null) return restaurantRepository.existsByIdAndOwner_Id(rv.getRestaurant().getId(), ownerId);
         return false;
     }
 
     /** 답글 업서트 */
     @Transactional
     public void upsertReply(Long ownerId, Long reviewId, String content) {
-        if (content==null || content.isBlank())
+        if (content == null || content.isBlank())
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "내용을 입력해 주세요.");
 
         Review rv = reviewRepository.findByIdAndDeletedFalse(reviewId)
@@ -101,9 +124,9 @@ public class OwnerReviewService {
         if (!canManage(ownerId, rv))
             throw new ResponseStatusException(HttpStatus.FORBIDDEN, "권한이 없습니다.");
 
-        var reply = ownerReplyRepository.findByReview_Id(reviewId).orElse(null);
+        OwnerReply reply = ownerReplyRepository.findByReview_Id(reviewId).orElse(null);
         if (reply == null) {
-            var owner = userRepository.findById(ownerId).orElseThrow();
+            User owner = userRepository.findById(ownerId).orElseThrow();
             reply = OwnerReply.builder()
                     .review(rv)
                     .owner(owner)
@@ -112,7 +135,7 @@ public class OwnerReviewService {
         } else {
             reply.setContent(content.trim());
         }
-        ownerReplyRepository.save(reply);
+        ownerReplyRepository.save(reply); // @PrePersist/@PreUpdate로 createdAt/updatedAt 관리
     }
 
     /** 답글 삭제 */
